--- a/apps/color-tracker-ui/src/app/app.html
+++ b/apps/color-tracker-ui/src/app/app.html
@@ -14,6 +14,7 @@
 
       <div class="control-section">
         <app-control-panel></app-control-panel>
+        <app-narrator [narration]="currentNarration"></app-narrator>
       </div>
     </div>
 
